Seperated style sheets for each component

--- a/src/style/LandingPage/LandingPageBlock.css
+++ b/src/style/LandingPage/LandingPageBlock.css
@@ -1,16 +1,3 @@
-.container-fluid{
-    border: solid;
-    border-color: black;
-}
-.landing-header{
-    text-align: left;
-}
-.quick-links-btn{
-    height: 4rem;
-    width: 15rem;
-    border: solid;
-    border-color: black;
-}
 .generic-block{
     height: 5rem;
     width: 15rem;
@@ -32,15 +19,9 @@
 .block-info{
     float: right;
 }
-.row-scroller{
-    overflow-x: auto;
+.block-info > p{
+    width: auto;
+    overflow: hidden;
     white-space: nowrap;
-    display: block;
-}
-.row-scroller > .row-scroller-column{
-    display: inline-block;
-    float:none;
-}
-.clear-div{
-    clear: both;
+    text-overflow: ellipsis;
 }
