Added player award and team award rows. Also set a max width for text in blocks. Also started on colors for draft lottery odds row

--- a/src/style/LandingPage/LandingPageBlock.css
+++ b/src/style/LandingPage/LandingPageBlock.css
@@ -19,8 +19,9 @@
 .block-info{
     float: right;
 }
-.block-info > p{
-    width: auto;
+.block-info > span{
+    display: inline-block;
+    width: 9.2rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
