Small css tweaks

--- a/src/style/LandingPage/LandingPageStandings.css
+++ b/src/style/LandingPage/LandingPageStandings.css
@@ -1,3 +1,7 @@
+.standings-header{
+    margin-left: 5rem;
+    margin-right: 2rem;
+}
 .standings-row{
     border-color: black;
     border: solid;
