Got modal to popup when skater/goalie stat leader blocks are clicks, information is presented in the modal

--- a/react/src/style/LandingPage/LandingPageStandings.css
+++ b/react/src/style/LandingPage/LandingPageStandings.css
@@ -13,3 +13,9 @@
     height: 20rem;
     overflow: auto;
 }
+.standings-info-row{
+    border-color: gray;
+}
+.standings-info-row :hover{
+    border: solid;
+}
